--- a/beken/package.json
+++ b/beken/package.json
@@ -13,8 +13,10 @@
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-async-handler": "^1.1.4",
     "knex": "^0.16.5",
-    "pg": "^7.9.0"
+    "pg": "^7.9.0",
+    "router": "^1.3.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.11"
