--- a/scbms/package.json
+++ b/scbms/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "node-sass": "^4.11.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-super-responsive-table": "^4.3.10",
+    "react-tabs": "^3.0.0",
     "tachyons": "^4.11.1"
   },
   "scripts": {
