--- a/scbms/package.json
+++ b/scbms/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "2.1.8",
     "react-super-responsive-table": "^4.3.10",
     "react-tabs": "^3.0.0",
+    "reactjs-popup": "^1.3.2",
     "tachyons": "^4.11.1"
   },
   "scripts": {
